--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta http-equiv="Content-Type" content="html/text"; charset="utf-8"/>
+		<meta http-equiv="Content-Type" content="html/text; charset=utf-8"/>
 		<title>An emtpy web page</title>
 	</head>
 	<body>
-		<h1>This web page is blank</h1>
+		<h1 style="color:blue">This web page is blank</h1>
 		<h2>Well, mostly blank</h2>
 	</body>
 </html>
