--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="html/text; charset=utf-8"/>
-		<title>An emtpy web page</title>
+		<title>A page of Quotations</title>
 	</head>
 	<body>
 		<h1 style="color:blue">This web page is blank</h1>
