--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="html/text; charset=utf-8"/>
 		<title>My page of Quotes</title>
+		<LINK href="styles.css" re="stylesheet" type="text/css">
 	</head>
 	<body>
 		<h1 style="color:blue">This web page is blank</h1>
