--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<li>"You can observe a lot by watching" --Yogi Berra</li>
 			<li>"Talk is cheap, show me the code" --Linus Torvalds</li>
 			<li>"Every good work of software start by scratching a developers personal itch" --Eric Raymond</li>
+			<li>"Never tell me the odss" --Han Solo</li>
 		</ul>
 	</body>
 </html>
