--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			<li>"Talk is cheap, show me the code" --Linus Torvalds</li>
 			<li>"Every good work of software start by scratching a developers personal itch" --Eric Raymond</li>
 			<li>"Never tell me the odss" --Han Solo</li>
+			<li>"Example, you know, far outweights precept" --Thomas Jefferson</li>
+			<li>"I love deadlines. I love the whooshing sound they make as they go by" --Douglas Adams</li>
 		</ul>
 	</body>
 </html>
