--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li>"Example, you know, far outweights precept" --Thomas Jefferson</li>
 			<li>"I love deadlines. I love the whooshing sound they make as they go by" --Douglas Adams</li>
 			<li>"A man is but the product of his thoughs. What he thinks he becomes" --Mahatma Gandhi</li>
+			<li>"Live long and prosper" --Spock</li>
 		</ul>
 	</body>
 </html>
